--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,10 @@ plac==0.9.6
 preshed==2.0.1
 regex==2018.1.10
 requests==2.20.0
+scikit-learn==0.20.0
+scipy==1.1.0
 six==1.11.0
+sklearn==0.0
 spacy==2.0.16
 thinc==6.12.0
 toolz==0.9.0
