--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 certifi==2018.10.15
 chardet==3.0.4
+Click==7.0
 cymem==2.0.2
 cytoolz==0.9.0.1
 dill==0.2.8.2
 en-core-web-sm==2.0.0
+Flask==1.0.2
 idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
 msgpack==0.5.6
 msgpack-numpy==0.4.3.2
 murmurhash==1.0.1
@@ -24,4 +29,5 @@ tqdm==4.28.1
 ujson==1.35
 urllib3==1.24.1
 vaderSentiment==3.2.1
+Werkzeug==0.14.1
 wrapt==1.10.11
