--- a/demo/package.json
+++ b/demo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "material-ui-slider": "^3.0.0",
     "react": "^16.6.1",
