--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+asn1crypto==0.24.0
 certifi==2018.10.15
+cffi==1.11.5
 chardet==3.0.4
 Click==7.0
+cryptography==2.4.2
 cymem==1.31.2
 cytoolz==0.9.0.1
 dill==0.2.8.2
@@ -17,6 +20,8 @@ murmurhash==0.28.0
 numpy==1.15.4
 plac==0.9.6
 preshed==1.0.1
+pycparser==2.19
+PyMySQL==0.9.2
 regex==2017.4.5
 requests==2.20.0
 scikit-learn==0.20.0
