Update flask json return for querying of documents to conform with new models

--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,7 @@
     "material-ui-slider": "^3.0.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
