--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dill==0.2.8.2
 en-core-web-sm==2.0.0
 en-coref-sm==3.0.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
